--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,21 +1,63 @@
 body {
     background-color: rgb(61, 61, 61);
+    display:flex;
+    align-items: center;
+    flex-direction: column;
 }
-p {
- color:white;
-}
+
+
+
 img {
-    width:40%;
+    width: 40%;
     height: 40%;
 }
-.card_container {
-    width:90%;
-    height:60%;
-    background-color: grey;
-    display:grid;
-    grid-template-columns: repeat(3,1fr) ;
-    grid-template-rows: repeat(3,1fr);
+.search-bar-container {
+    background-color: #f2f2f2;
+    padding: 10px;
+    position: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+  /* Ensures the search bar is on top of other content */
+  }
+  
+  #search-bar {
+    width: 100%;
+    padding: 8px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+  }
+.carousel {
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    width:70%;
 
+}
+.card_container {
+    margin-top: 2%;
+    width: 100%;
+    height: 50%;
+    background-color: grey;
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+
+}
+#close_modals {
+    display:none;
+    position:absolute;
+    margin-top:4%;
+    margin-left: 57%;;
+    border-radius: 90px;
+    width:30px;
+    height:30px;
+    border-style:none;
+    color:antiquewhite;
+    background-color:rgb(212, 78, 78) ;
+    z-index:2;
 }
 .card {
     background-color: rgb(58, 57, 57);
@@ -26,13 +68,70 @@ img {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    height:65%;
+    width:60%;
 }
 
 .card_info {
-    display:grid;
-    height:50%;
-    grid-template-columns: 1fr 2fr;;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    /* Could be more or less, depending on screen size */
+    width:50%;
+    display: grid;
+    height: 50%;
+    grid-template-columns:  1fr 2fr;
+    grid-template-rows:  1fr 1fr 1fr 1fr;
     align-content: center
+}
 
+.card_text {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    color:white;
+
+}
+
+
+
+/* The Modal (background) */
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+ 
+    /* Black w/ opacity */
+  
+    justify-content: space-around
+}
+
+.modal_conainer {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #a8a8a8;
+    border-radius: 90px;
+    margin-top: 3%;;
+    margin-left:23%;
+    margin-right:25%;
+    height:70%;
+    width: 30%;
+    
+}
+.card_modal_image {
+    scale:inherit;
 }
