--- a/stylesheet.css
+++ b/stylesheet.css
@@ -115,6 +115,7 @@ img {
     box-shadow: var(--inside-shadow);
     display: grid;
     justify-items: center;
+    justify-content: center;
     align-items: start;
     padding-top:1%;
     padding-bottom: 1%;
@@ -235,4 +236,95 @@ img {
 }
 .card_modal_image {
     scale: inherit;
+}
+@media(1100px < width < 1240px) {
+    p {
+        font-size:15px;
+    }
+    .card-container {
+        width: 100%;
+        height: 500px;
+    }
+    .card {
+    height: 75%;
+    width: 50%;
+    }
+   
+}
+@media( width < 1100px) {
+    p {
+        font-size:8px;
+    }
+    img {
+        width:100%;
+        height:100%;
+    }
+    .card-container {
+        width: 100%;
+        height: 100%;
+
+    }
+    .card {
+    height: 75%;
+    width: 50%;
+    margin-right: 0;
+    }
+   
+}
+@media(650px < height < 750px) {
+    p {
+        font-size:15px;
+    }
+    .card-container {
+        height: 300px;
+    }
+    .card {
+    height: 80%;
+
+    }
+   
+}
+@media( 500 < height < 650px) {
+    p {
+        font-size:8px;
+    }
+    img {
+        width:100%;
+        height:100%;
+    }
+    .card-container {
+        height: 60%;
+
+    }
+    .card {
+    height: 55%;
+    }
+   
+}
+@media(  height < 500px) {
+    p {
+        font-size:8px;
+    }
+    img {
+        width:100%;
+        height:100%;
+    }
+    .card {
+    height: 35%;
+    margin:0;
+    
+    }
+    .card-container {
+        height:10%;
+        align-items: stretch;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        grid-column-gap: 10px;
+     grid-row-gap: 10px;
+
+    }
+    img {
+        display:none;
+    }
+   
 }
